# ferros

./: .gitignore  CLOSURE-EVIDENCE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCTRINE.md  GLOSSARY.md  GOVERNANCE.md  LAUNCH.md  LICENSE-DOCS  LICENSING.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  THREAT-MODEL.md  ferros-blueprint.html  live_verification.sh  nohup.out  package.json  process_sessions.py  smoke_test.js  solution.js  state.json  test.js
.github/: PULL_REQUEST_TEMPLATE.md
.tmp/: bg-r.md  h9-lifecycle-1777507549474.grants.json  h9-lifecycle-1777507549474.json  h9-lifecycle-1777507549474.key.json  h9-lifecycle-1777507654669.grants.json  h9-lifecycle-1777507654669.json  h9-lifecycle-1777507654669.key.json  h9-lifecycle-1777955766526.grants.json  h9-lifecycle-1777955766526.json  h9-lifecycle-1777955766526.key.json  h9-profile-1777507549363.json  h9-profile-1777507549363.key.json  h9-profile-1777507654559.json  h9-profile-1777507654559.key.json  h9-profile-1777947598367.json  h9-profile-1777947598367.key.json  h9-profile-1777955766188.json  h9-profile-1777955766188.key.json  ha.md  sg-r.md  w-r.md
agents/: manifest.json
coordinator/: create_packet.py  jest.config.cjs  package.json  test_packet.json
crates/ferros-hub/: Cargo.toml
crates/ferros-hub/src/: ha_bridge.rs  lib.rs  main.rs  remote_bridge.rs
crates/ferros-hub/tests/: local_bridge.rs
crates/ferros-node/: Cargo.toml
crates/ferros-node/src/: lib.rs  main.rs
crates/ferros-node/tests/: profile_cli_linux.rs
crates/ferros-profile/: Cargo.toml
crates/ferros-profile/src/: lib.rs
docs/: AGENT_GUIDE.md  ORCHESTRATION.md  agent-command-center.html  algo-trading-arena.html  architecture-overview.md  builder-blueprint.md  core-hardware-targets.md  deployment-roadmap.html  ferros-mind-map.html  ferros-project-map.html  ferros-showcase.html  forge-workbench.html  home-hud-dashboard.html  personal-profile.html  schedule-ledger.html
harnesses/: _constants.js  acceptance-harness.html  consumer-helper-harness.html  ferros-contract-validator.html  localhost-shell-acceptance-harness.html  negative-harness.html  preflight-check.html  round-trip-harness.html  runtime-harness.html  semantic-fixture-linter.html  ui-acceptance-harness.html  write-path-harness.html
schemas/: audit-record.schema.json  capability-grant.v0.json  card.schema.json  deck.schema.json  hub-local-bridge-artifact.schema.json  hub-local-runway-report.schema.json  hub-local-state-snapshot.schema.json  identity.schema.json  local-push-audit-envelope.schema.json  onramp-decision-rehearsal.schema.json  onramp-proposal.schema.json  profile.schema.json  profile.v0.json  schedule-event.schema.json  template.schema.json
(+524 files in other folders)
