[workspace]
members = ["xtask", "crates/ferros-core", "crates/ferros-runtime", "crates/ferros-profile", "crates/ferros-agents", "crates/ferros-node", "crates/ferros-data", "crates/ferros-hub", "crates/ferros-x86_64-scaffold"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-only"

[workspace.lints.rust]
unsafe_code = "forbid"
