[package]
name = "ferros-hub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ferros-agents = { path = "../ferros-agents" }
ferros-core = { path = "../ferros-core" }
ferros-data = { path = "../ferros-data" }
ferros-profile = { path = "../ferros-profile" }

[[bin]]
name = "ferros-hub"
path = "src/main.rs"