[package]
name = "ferros-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ferros-agents = { path = "../ferros-agents" }
ferros-core = { path = "../ferros-core" }
ferros-hub = { path = "../ferros-hub" }
ferros-profile = { path = "../ferros-profile" }
ferros-runtime = { path = "../ferros-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "=0.3.36", features = ["formatting"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "ferros-node"
path = "src/main.rs"

[[bin]]
name = "ferros"
path = "src/bin/ferros.rs"
