[package]
name = "ferros-profile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ferros-core = { path = "../ferros-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
jsonschema-valid = "=0.5.2"

[lib]
path = "src/lib.rs"
