[package]
name = "ferros-profile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ed25519-dalek = { version = "=2.1.1", default-features = false, features = ["std"] }
ferros-core = { path = "../ferros-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["parsing"] }

[lib]
path = "src/lib.rs"
